<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/layout_password_recovery_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/space_horizontal"
    android:paddingVertical="@dimen/dimen_twelve"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_recovery_title"
        android:textSize="16sp"
        app:fontFamily="@font/iran_sans_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:gravity="center_horizontal"
        android:text="@string/password_recovery_message" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:hint="@string/all_email_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/layout_password_recovery_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/layout_password_recovery_action"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:text="@string/all_next_title" />
</LinearLayout>
