<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen_forty_eight">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_email_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_forty_eight"
        android:hint="@string/all_enter_email_message"
        app:boxStrokeColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/layout_login_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_password_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_forty_eight"
        android:layout_marginTop="@dimen/space_vertical"
        android:hint="@string/all_enter_password_message"
        app:boxStrokeColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/layout_login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--<TextView-->
    <!--    android:id="@+id/layout_login_password_recovery_action"-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:layout_marginTop="@dimen/dimen_sixteen"-->
    <!--    android:textColor="@color/textColorHint"-->
    <!--    android:paddingVertical="@dimen/dimen_two"-->
    <!--    android:paddingHorizontal="@dimen/dimen_eight"-->
    <!--    android:clickable="true"-->
    <!--    android:focusable="true"-->
    <!--    android:background="?attr/selectableItemBackground"-->
    <!--    android:text="@string/layout_login_password_recovery_title"/>-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/layout_login_login_action"
        android:layout_width="112dp"
        android:layout_height="58dp"
        android:layout_marginTop="84dp"
        android:text="@string/all_login_title_short" />

</LinearLayout>